# tmpz

./: .gitignore
3d/: cube.js  index-wave.html  index-wave.js  index.html  index.js  penger.js
9p/: Justfile  README.md  go.mod  go.sum
alpinejs/: Makefile  bun.lockb  index.html  package.json  styles.css  text.html
ansible/: Makefile  main.ansible.yaml
async-download/: README.md  main.py  main.ts  pyproject.toml
aws-ec2/: ec2-launch.js  package.json  pnpm-lock.yaml
aws-lambda-deno/: .env.example  Dockerfile  Makefile  main.ts
aws-lambda-runtime/: package-lock.json  package.json  pnpm-lock.yaml
bun/: package.json
bun-bundle/: .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  index.ts  package.json
bun-c/: js.js  native.c
bun-compile-browser/: index.html  script.ts
bun-embed/: .gitignore  Makefile  bun.lockb  main-x.ts  main.ts  package.json
bun-s3/: CLAUDE.md  README.md  bucket-gcs.ts  bucket-oci.ts  bucket-s3.ts  bucket.ts  package.json  tsconfig.json
c-boehm-gc/: .gitignore  Justfile  README.md  gc_boilerplate.c
c-generic/: Justfile  main.c
c-longjmp/: main.c  main.zig
c-metadata-ip/: Dockerfile  Justfile  main.c
c3c-hello/: .gitignore  Justfile  main.c3  project.json
chrome-extension/: content.js  manifest.json
chrome-extension-error/: hook.js  injected.js  manifest.json
clerk-js/: index.html  main.ts  package.json
cloudinary/: package.json  pnpm-lock.yaml  test.js
cmake/: CMakeLists.txt  Makefile  client.c  client.h  main.c
competion-zsh/: Justfile  go.mod  main.go
cr/: .gitignore  Makefile  bun.lockb  cr  cr.ts  package.json  vm.ts
css/: index.html
deno-cron/: main.ts
deno-discorder/: main.ts
deno-embed/: .gitignore  Makefile  main.ts
deno-hono/: hello.ts
deno-http/: .spaceignore  Spacefile  deno.json  main.ts
deno-jsx/: deno.json  main.tsx
deno-kv/: deno.jsonc  main.ts
deno-kv-htmx-editor/: deno.json  main.tsx
deno-kv-queue/: deno.jsonc  main.ts
deno-log/: main.ts
deno-serve-index/: README.md  deno.json  main.ts
deno-spawn/: main.ts  shell.ts
deno-sqlite/: main.ts
deno-ssr/: main.tsx  pnpm-lock.yaml
deno-websocket/: Dockerfile  ws-server.ts  ws.ts
django-cloudrun/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
django-mongo/: README.md  pyproject.toml
docker-memory-test/: Dockerfile  Makefile  main.py
docs/: index.html  site.webmanifest
dosbox-x/: .gitignore  Justfile  dosbox-x.conf
download-js/: index.html  script.js
dropzone-js/: go.mod  go.sum  index.html  main.go
elysiajs/: bun.lockb  package.json
express/: index.js  package-lock.json  package.json
fastapi-cloud/: AGENTS.md  main.py  main_test.py  pyproject.toml
fastapi-content-type/: .gitignore  README.md  main.py  pyproject.toml
fastapi-dual-type-endpoint/: README.md  main.py  pyproject.toml  request.json
fastapi-proxy/: Makefile  README.md  main.py  pyproject.toml
fastapi-proxy2/: main.py  pyproject.toml
fastapi-streaming/: .gitignore  main.py  pyproject.toml
fastapi-websocket/: main.py  pyproject.toml
fpc-lazarus/: r
gcp-auth-token/: .gitignore  README.md  bun.lockb  gcp-token.ts  package.json
gcp-bucket-compose/: create.py  main.py  pyproject.toml
gcp-cloudrun-django/: Dockerfile  Makefile  pyproject.toml
gcp-cloudrun-django/application/: admin.py  settings.py
gcp-cloudrun-django/master/: bot.py  urls.py
gcp-cloudrun-stub/: .gitignore  Dockerfile  Justfile  go.mod  go.sum  main.go
gcp-firestore/: .gitignore  Makefile  main.py  main.ts
gcp-function-cloudrun-benchmark/: Justfile  format.txt  go.mod  main.go
gcp-function-rankone/: main.py
gcp-gke/: Dockerfile  Makefile  README.md  caddy.yaml  deno.json  info.ts  k-cronjob-timer.yaml  k-deployment-caddy.yaml  k-deployment-info-canary.yaml  k-deployment-info.yaml  k-ingress-ingress.yaml  k-job-now.yaml  k-persistent-volume-claim.yaml  k-persistent-volume.yaml  k-service-loadbalancer-caddy.yaml  k-service-loadbalancer-info.yaml  k-service-nodeport-caddy.yaml  k-service-nodeport-info.yaml  kustomization.yaml  status.js
gcp-gmail/: README.md  main.js  package.json  pnpm-lock.yaml
gcp-iap/: .gitignore  Justfile  go.mod  main.go
gcp-logging/: Dockerfile  main.go
gcp-logging-clog/: go.mod
gcp-logging-python/: main.py
gcp-logging-slog/: go.mod  main.go
gcp-pubsub/: .env.example  .gitignore  Makefile  index.ts  main.tf  terraform.tfvars.example
gcp-secrets/: .gitignore  Dockerfile  Makefile  calls.http  index.ts
gcp-sheets/: .gitignore  main.js  package.json  pnpm-lock.yaml
gcp-sheets2/: .gitignore  README.md  bun.lockb  index.ts  package.json
gcp-sheets3-formatting/: .gitignore  deno.json  main.ts
gcp-storage/: go.mod  main.go
gcp-tracing/: main.py  requirements.txt
git-commit-loc/: loc.py
go-async/: Makefile  go.mod  main.go
go-aws-lambda/: .env.example  .gitignore  Makefile  main.go
go-bench/: go.mod  main_test.go
institute/: README.md  matrix1.py  matrix2.py  pyproject.toml
js-sse/: go.mod  index-go.html  index-py.html  main.go  main.py  pyproject.toml
locust/: main.py  pyproject.toml
python-ffmpeg-video/: main.py  main_mp4.py  pyproject.toml  slog.py  video_decoder.py  video_decoder_test.py
python-ffmpeg-video/.claude/: settings.local.json
python-ffmpeg-video/input/: enrollment_frame_0.h264  enrollment_frame_1.h264  enrollment_frame_2.h264  enrollment_frame_3.h264  enrollment_frame_4.h264  enrollment_frame_5.h264  enrollment_frame_6.h264  enrollment_frame_7.h264  enrollment_frame_8.h264  enrollment_frame_codec_config.h264
python-flatten-json/: flatten_json.py  flatten_json_test.py  pyproject.toml
python-grpc-rest/: .gitignore  Makefile  asyncio_route_guide_client.py  asyncio_route_guide_server.py  pyproject.toml  route_guide_pb2.py  route_guide_pb2_grpc.py
python-pytorch/: alphabet.py  bmp-pgm.py  pyproject.toml  recognise.py  rk86_font.pgm  take-26.py  words.py
rust-async/: Cargo.toml  Makefile
rust-async/src/: main.rs
rye-py/: README.md  pyproject.toml
starlette-sse/: .gitignore  README.md  main.py  pyproject.toml
webm/: .gitignore  main.py  pyproject.toml
(+1224 files in other folders)
