[project]
name = "fastapi-content-type"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexander Demin", email = "ademin@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "python-multipart>=0.0.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
