[tool.poetry]
name = "django-cloudrun"
version = "0.1.2"
description = ""
authors = ["Alexander Demin <ademin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.1"
Django = "^5.0.6"
psycopg = { extras = ["binary"], version = "^3.1.19" }
uvicorn = "^0.30.1"
django-crispy-forms = "^2.1"
whitehouse = "^0.3.1"
dj-database-url = "^2.2.0"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.1"
python-telegram-bot = "13.15"


[tool.poetry.group.development.dependencies]
django-stubs = "^5.0.2"
djangorestframework-types = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
