[project]
name = "zocust"
version = "0.1.0"
authors = [{ name = "Alexander Demin", email = "ademin@gmail.com" }]
dependencies = ["locust>=2.24.1"]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = []

[tool.poetry]
name = "zocust"
version = "0.1.0"
description = ""
authors = ["Alexander Demin <ademin@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
