[project]
name = "python-flatten-json"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.mypy]
strict = true
pretty = true
incremental = false
explicit_package_bases = true
show_error_context = true
show_column_numbers = true
error_summary = false

