[tool.poetry]
name = "python-grpc-rest"
version = "0.1.0"
description = ""
authors = ["Alexander Demin <ademin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
grpcio-tools = "^1.65.4"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
grpc-stubs = "^1.53.0.5"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
