[package]
name = "rust-async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
