[project]
name = "rye-py"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Alexander Demin", email = "ademin@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
